# ai_fastapi_boilerplate

./: .gitignore  .svnignore  DockerFile  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 4a900061f6ce_delete_fav_number.py  5ca83f0bca9a_description_of_changes.py  79bb629c8875_description_of_changes.py  9f5fd05703b3_initial_migration.py  a1cd157ec6f9_initial_migration.py  e7cb9cf27879_description_of_changes.py
src/: config.py  database.py  exceptions.py  main.py  middleware.py
src/auth/: router.py  schema.py
src/crud/: models.py  router.py
templates/: error.html  index.html
