[tool.poetry]
name = "ai-fastapi-boilerplate"
version = "0.1.0"
description = "A Python-FastAPI boilerplate for Etoos AI Group"
authors = ["Will Gyuha Yi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
jinja2 = "^3.1.4"
itsdangerous = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"